src/styles/shared_components.scss
@import "./utils.scss";
.navigate_item_cont{
    //border: 2px solid red;
    display: flex;
    padding: 5px 7px;
    width: max-content;
    border-radius: 6px;
    justify-content: space-between;
    align-items: center;
    font-size: 0.8rem;
    background-color: white;
    color: $fontPrimary;
    text-decoration: none;
    .icon{
        //border: 2px solid green;
        //align-content: center;
        //height: 25px;
    }
    .text{
        //border: 2px solid green;
    }
}

.heading{
    //border: 2px solid indigo;
    margin: 5px;
    margin: 0;
    padding: 0;
    font-size: 1.2rem;
}

.input_cont{
    //border: 2px solid blue;
    position: relative;
    height: 60px;
    margin-top: 10px;
    input{
        position: absolute;
        //margin: 5px;
        padding: 15px;
        border-radius: 8px;
        outline: none;
        transition: 0.3s;
        width: 100%;
        box-sizing: border-box;
    }
    label{
        //border: 2px solid orange;
        position: absolute;
        top: 20%;
        left: 6%;
        transition: 0.3s;
        padding: 0 8px;
        border-radius: 4px;
        color: #555555;
    }
}

select{
    //border: 2px solid red;
    padding: 12px;
    border-radius: 8px;
    outline: none;
    transition: 0.3s;
    width: 100%;
    box-sizing: border-box;
    font-size: 1rem;
    margin: 10px 0;
    option{
        border: 2px solid indigo;
    }
}

#button_component{
    margin-top: 10px;
    padding: 15px;
    font-size: 1rem;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    &:hover{
        opacity: 0.8;
    }
}
.primary_button_component{
    border: 2px solid $primaryLight;
    border-radius: 4px;
    gap: 6px;
    cursor: pointer;
    &:hover{
        opacity: 0.6;
    }
}

.form_shared_component{
    //border: 2px solid red;
}

.key_value_pairs_cont{
    //border: 2px solid red;
    width: 300px;
    padding: 8px;
    border-radius: 8px;
    background-color: white;
    //margin-top: 10px;
    box-shadow: 0.1px 0.1px 2px 0.2px rgba(0,0,0,0.2);
    .key_value_pair_cont{
        //border: 2px solid violet;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        gap: 10px;
        margin-top: 5px;
        color: #555555;
        .key{
            //border: 2px solid indigo;
            font-size: 0.9rem;
            font-weight: 500;
        }
        .value{
            //border: 2px solid blue;
            font-size: 0.9rem;
        }
    }
}

.skeleton_cont{
    //border: 1px solid red;
    //padding: 10px;
    border-radius: 4px;
    background-color: #aaaaaa;
    animation: fade 1.4s linear infinite;
}

.timer_cont{
    //border: 2px solid blue;
    width: 300px;
    //height: 160px;
    box-sizing: border-box;
    border-radius: 8px;
    background-color: white;
    box-shadow: 0.1px 0.1px 2px 0.2px rgba(0,0,0,0.2);
    .timer_heading{
        //border: 2px solid red;
        height: 20px;
        text-align: center;
        font-size: 0.8rem;
        font-size: 0.9rem;
        font-weight: 500;
        color: #555555;
    }
    .timer_value{
        //border: 2px solid black;
        height: 140px;
        width: 140px;
        box-sizing: border-box;
        padding: 10px;
        .watch_outer{
            //border: 2px solid green;
            width: 100%;
            height: 100%;
            align-content: center;
            border-radius: 50%;
            .watch_inner{
                //border: 2px solid orange;
                width: 80%;
                height: 80%;
                text-align: center;
                align-content: center;
                margin: 0 auto;
                box-sizing: border-box;
                border-radius: 50%;
                background-color: white;
                font-size: 0.9rem;
                color: #555555;
            }
        }
    }
}

.spinner_cont{
    margin: 0 auto;
    border-radius: 50%;
    animation: spin 1s infinite linear;
};

.dialog_backdrop_cont{
    //border: 2px solid red;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0,0,0,0.6);
    .dialog_cont{
        //border: 2px solid blue;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        background-color: white;
        padding: 20px;
        border-radius: 8px;
        .dialog_label{
            margin-left: 10px;
            font-weight: 500;
        }
    }
}

.scrollable_cont{
    //border: 2px solid red;
    overflow-x: auto;
    padding: 10px;
    position: relative;
    .sticky_column{
        //border: 2px solid violet;
        position: absolute;
        bottom: 10px;
        .value{
            //border: 2px solid indigo;
            width: 100px;
            font-size: 0.65rem;
            background-color: $primaryLight;
            color: #313131;
            padding: 10px;
            margin-top: 10px;
            opacity: 0.8;
        }
    }
}

.heading_para_cont{
    //border: 2px solid red;
    margin-top: 10px;
    border: 1px solid $primaryLight;
    border-radius: 4px;
    padding: 10px;
    //background:url("../../../public/background1.png");
    background-color: $primaryFade;
    .heading_cont{
        //border: 1px solid red;
        font-size: 0.8rem;
        margin: 0;
    }
    .para_cont{
        //border: 1px solid blue;
        color: $fontPrimary;
        font-size: 0.65rem;
    }
}

@keyframes spin {
    0%{
        rotate: 0deg;
    }
    100%{
        rotate: 360deg;
    }
}
@keyframes fade {
    0%{
        opacity: 1;
    }
    50%{
        opacity: 0.3;
    }
    100%{
        opacity: 1;
    }
}

@media screen and (width <= 850px) {
    .navigate_item_cont{
        //border: 2px solid red;
        //padding: 5px 7px;
        font-size: 0.7rem;
        .icon{
            //border: 2px solid green;
            //align-content: center;
            //height: 25px;
        }
        .text{
            //border: 2px solid green;
        }
    }
}

